# 05-chat

./: .gitignore  Cargo.toml  app.yaml  cliff.toml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_server/: Cargo.toml
chat_server/fixtures/: encoding.pem
chat_server/sql/: worspace.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/fixtures/: decoding.pem
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20240717101604_initial.sql  20240724015823_workspace.sql  20240731011211_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
sql/: init.sql
src/: lib.rs  main.rs
