[workspace]
members = [ "chat_core","chat_server", "notify_server"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
chat_core ={ path = "./chat_core" }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "1.0.62"
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v7", "serde"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "trace", "fs"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.9"
