[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = {workspace = true}
jwt-simple = {workspace = true}
serde = { workspace = true }
serde_json = "1.0.120"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum-extra = { workspace = true }
hex = "0.4.3"
mime_guess = "2.0.5"
sha1 = "0.10.6"
chat_core ={ workspace = true }


[dev-dependencies]
http-body-util = "0.1.2"
sqlx-db-tester = "0.4.2"
